--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -38,11 +38,11 @@ weight = 2
 #pre = "#"
 #url = "pricing"
 #weight = 5
-[[Languages.en.menu.main]]
-name = "blog"
-pre = "#"
-url = "blog"
-weight = 6
+#[[Languages.en.menu.main]]
+#name = "blog"
+#pre = "#"
+#url = "blog"
+#weight = 6
 [[Languages.en.menu.main]]
 name = "Kontakt"
 pre = "#"
