--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,5 +1,6 @@
 baseURL = "https://www.horlyck.it"
 disableLanguages = []
+defaultContentLanguage = "da"
 disqusShortname = ""
 paginate = "6"
 summaryLength = "15"
@@ -150,6 +151,9 @@ description = "Tekniske løsninger tilpasset til dit behov"
 google_analytics_id = "G-WSSGJ4GKJ8"
 logo = "images/HIT_logo_512_flat_trans.png"
 post_share = true
+
+# cookies
+
 [params.cookies]
 enable = false
 expire_days = 2
@@ -159,6 +163,9 @@ gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqO
 map_latitude = "51.5223477"
 map_longitude = "-0.1622023"
 map_marker = "images/marker.png"
+
+# plugins
+
 [[params.plugins.css]]
 link = "plugins/bootstrap/bootstrap.min.css"
 [[params.plugins.css]]
