--- a/exampleSite/data/en/cta.yml
+++ b/exampleSite/data/en/cta.yml
@@ -1,14 +1,11 @@
-#Todo: Translate back to english
-
 ---
 cta:
   enable: true
   bg_image: images/backgrounds/bg-white-wall.jpg
   bg_image_webp: images/backgrounds/bg-white-wall.webp
   title: Stærkt teknisk fundament & eksponentielt potentiale
-  content: 'Vi er ikke låst til en speciel opgavetype. Vi levere både rådgivning og
-    løsninger indenfor en bred vifte af områder. '
+  content: 'VWe deliver both consulting and digital solutions to almost any situation.'
   button:
     enable: true
-    label: Start et projekt med os
+    label: Start a project with us
     link: "#contact"
