+45 to phone number

--- a/exampleSite/data/da/contact.yml
+++ b/exampleSite/data/da/contact.yml
@@ -8,7 +8,7 @@ contact:
   - icon: ti-location-pin
     info: Møllevej 11, 2990 Nivå
   - icon: ti-mobile
-    info: 'Telefon: 3132 3660'
+    info: 'Telefon: +45 3132 3660'
   - icon: ti-email
     info: 'Email: info@horlyck.it'
   contact_form:
